# usaypt

./: .gitignore  CMakeLists.txt  Makefile  chainfountain_driver.cpp  config.h  cout  main.cpp  readme.org  scratch.cpp  sim.cpp  uncmake.sh
include/: ChainFountain.hpp
src/: bead.cpp
static/models/: NoContextNeeded.blend
